<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*" >
    
    <TableRow 
        android:id="@+id/calendar_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:background="@drawable/week_label">
        
        <TextView android:id="@+id/navigate_month_prev" 
            android:text="@string/prev"
            android:layout_weight=".75"
            android:gravity="right|center_vertical"
            style="@style/CalendarHeaderCell" />
        
        <TextView android:id="@+id/month_label" 
			style="@style/CalendarHeaderCell"     
			android:gravity="center" 
			android:layout_weight="1"     
			android:text="" />
        
        <TextView android:id="@+id/navigate_month_next" 
            android:text="@string/next" 
            android:layout_weight=".75"
            android:gravity="left|center_vertical"
            style="@style/CalendarHeaderCell" />
        
    </TableRow>
    
    <TableRow 
        android:id="@+id/calendar_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".3" >
	    <TextView android:id="@+id/label_sunday"
		    android:text="@string/label_sunday"
		    style="@style/CalendarCell"
		    />
		<TextView android:id="@+id/label_monday"
		    android:text="@string/label_monday"
		    style="@style/CalendarCell"
		    />
		<TextView android:id="@+id/label_tuesday"
		    android:text="@string/label_tuesday"
		    style="@style/CalendarCell"
		    />
		<TextView android:id="@+id/label_wednesday"
		     android:text="@string/label_wednesday"
		     style="@style/CalendarCell"
		     />
		<TextView android:id="@+id/label_thursday"
		    android:text="@string/label_thursday"
		    style="@style/CalendarCell"
		    />
		<TextView android:id="@+id/label_friday"
		    android:text="@string/label_friday"
		   	style="@style/CalendarCell"
		    />
		<TextView android:id="@+id/label_saturday"
		    android:text="@string/label_saturday"
		    style="@style/CalendarCell"
		    />
	</TableRow>
</TableLayout>
